feat: 역대 전공동아리 조회 read-only 트랜잭션 적용 및 스트림 toList 변경