@@ -1,5 +1,6 @@
 package co.kr.muldum.application.history;
 
+import org.springframework.transaction.annotation.Transactional;
 import co.kr.muldum.application.history.dto.HistoryResponseDto;
 import co.kr.muldum.domain.history.model.History;
 import co.kr.muldum.domain.history.service.HistoryService;
@@ -15,10 +16,11 @@ public class HistoryUseCase {
 
     private final HistoryService historyService;
 
+    @Transactional(readOnly = true)
     public List<HistoryResponseDto> getHistories(Integer generation) {
         List<History> histories = historyService.findHistories(generation);
         return histories.stream()
                 .map(HistoryResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
